# sal-cli

./: .gitignore  README.md  pyproject.toml
sal/: __init__.py  cli.py  config.py  launcher.py  mcp.py  shortcuts.py
